--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>GC Tools</title>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.3/angular.min.js"></script>
     <link rel="stylesheet" href="mdl/material.min.css">
-    <link rel="shorcut icon" type="image/png" href="logo2.png">
+    <link rel="shorcut icon" type="image/ico" href="logo2.ico">
     <script defer src="mdl/material.min.js"></script>
     <style>
         .mdl-textfield {
