--- a/gc/index.html
+++ b/gc/index.html
@@ -1,10 +1,10 @@
 <!doctype html>
-<html ng-app="gcApp">
+<html ng-app="gcApp" manifest="manifest.appcache">
 
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>GC Tools</title>
-    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.3/angular.min.js"></script>
+    <script src="angular.min.js"></script>
     <link rel="stylesheet" href="mdl/material.min.css">
     <link rel="apple-touch-icon" sizes="57x57" href="/apple-touch-icon-57x57.png">
     <link rel="apple-touch-icon" sizes="60x60" href="/apple-touch-icon-60x60.png">
