--- a/gc/index.html
+++ b/gc/index.html
@@ -2,7 +2,6 @@
 <html ng-app="gcApp" manifest="manifest.appcache">
 
 <head>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>GC Tools</title>
     <script src="angular.min.js"></script>
     <link rel="stylesheet" href="mdl/material.min.css">
@@ -14,8 +13,9 @@
     <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5">
     <meta name="msapplication-TileColor" content="#da532c">
     <meta name="theme-color" content="#ffffff">
-    <meta name="HandheldFriendly" content="True">
-    <meta name="MobileOptimized" content="320">
+ <meta name="HandheldFriendly" content="True">
+  <meta name="MobileOptimized" content="320">
+  <meta name="viewport" content="width=device-width, target-densitydpi=160dpi, initial-scale=1.0, maximum-scale=1, user-scalable=no, minimal-ui">
     <script defer src="mdl/material.min.js"></script>
     <style>
         .mdl-textfield {
