--- a/gc/index.html
+++ b/gc/index.html
@@ -11,7 +11,7 @@
     <link rel="icon" type="image/png" href="/favicon-16x16.png" sizes="16x16">
     <link rel="manifest" href="../manifest.json">
     <link rel="mask-icon" href="../safari-pinned-tab.svg" color="#5bbad5">
-    <meta http-equiv="Refresh" content="0; url=https://wolojoli.nl/gc">
+    <meta http-equiv="refresh" content="0; url=https://wolojoli.nl/gc">
     <meta name="msapplication-TileColor" content="#da532c">
     <meta name="theme-color" content="#ffffff">
     <meta name="apple-mobile-web-app-capable" content="yes">
